--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 body {
-	font-family: 'Helvetica Neue';
-	font-size: 30px;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 100px;
-	text-align: center;
+	font-family: 'Helvetica Neue', Helvetica;
+	background: url('assets/white_wall.png');
 }
 
 h2 {
@@ -14,75 +10,94 @@ h2 {
 .temperature {
 	font-size: 120px;
 }
-
 .efficient {
 	color: green;
 }
-
 .average {
 	color: orange;
 }
-
 .inefficient {
 	color: red;
 }
-button {
-	width: 13%;
-	height: 15%;
-	border: none;
-	margin: -5px;
-	cursor: pointer;
+
+.thermostat-container {
+	width: 20%;
+	font-family: 'Helvetica Neue', Helvetica;
+	padding: 20px 0px 0px 0px;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: center;
+	border-radius: 25px;
+	box-shadow: 5px 5px 0px 2px #6E84AC;
+	margin-top: 90px;
+	background-color: #FFFEF9;
 }
-	button.reset {
-		width: 25.8%;
-		font-size: 0.8em;
-		background-color: #DDDEDD;
-		margin-bottom: 1%;
-		height: 12%;
-		border-bottom: 1px solid #858585;
-		border-right: 1px solid #858585;
-		border-left: 1px solid #858585;
-		border-bottom-left-radius: 3px;
-		border-bottom-right-radius: 3px;
-		border-top: 1px solid #858585;
+
+.temp-controls {
+	display: flex;
+	height: 40px;
+}
+	.increaseTemp {
+		border: 0;
+		width: 50%;
+		background-color: #FFFEF9;
+		cursor: pointer;
+		color: #468966;
+		border-top: 1px solid #DEDEDE;
+		border-bottom: 1px solid #DEDEDE;
+		border-right: 1px solid #DEDEDE;
 	}
-	button.reset:hover {
-		background-color: #BEC0BE;
-	}
-	button.reset:focus {
-		outline: none;
-	}
-	button.increaseTemp {
-		background-color: #DDDEDD;
-		color: green;
-		border-left: 1px solid #858585;
-		border-top: 1px solid #858585;
-		border-top-left-radius: 3px;
-	}
-		button.increaseTemp:hover {
-		background-color: #BEC0BE;
-	}
-		button.increaseTemp:focus {
-			outline: none;
+		.increaseTemp:hover {
+			background-color: #F3F0E1;
 		}
-	button.decreaseTemp {
-		background-color: #DDDEDD;
-		color: red;
-		border-top: 1px solid #858585;
-		border-right: 1px solid #858585;
-		border-top-right-radius: 3px;
+		.increaseTemp:active {
+			position: relative;
+			top: 1px;
+		}
+		.increaseTemp:focus {
+			outline: 0;
+		}
+	.decreaseTemp {
+		border: 0;
+		width: 50%;
+		background-color: #FFFEF9;
+		cursor: pointer;
+		color: #8E2800;
+		border-top: 1px solid #DEDEDE;
+		border-bottom: 1px solid #DEDEDE;
 	}
-		button.decreaseTemp:hover {
-		background-color: #BEC0BE;
+		.decreaseTemp:hover {
+			background-color: #F3F0E1;
+		}
+		.decreaseTemp:active {
+			position: relative;
+			top: 1px;
+		}
+		.decreaseTemp:focus {
+			outline: 0;
+		}
+
+	.reset {
+		border: 0;
+		font-size: 20px;
+		background-color: #FFFEF9;
+		cursor: pointer;
+		width: 100%;
+		margin-top: -2px;
+		padding: 5px;
+		border-bottom: 1px solid #DEDEDE;
 	}
-		button.decreaseTemp:focus {
-			outline: none;
+		.reset:hover {
+			background-color: #F3F0E1;
 		}
-		div#psm-checkbox {
-			width: 25%;
-			margin-left: auto;
-			margin-right: auto;
+		.reset:active {
+			position: relative;
+			top: 1px;
 		}
-		label#psm {
-			font-size: 0.8em;
+		.reset:focus {
+			outline: 0;
 		}
+
+	#psm-checkbox {
+		padding: 6px;
+	}
