--- a/style.css
+++ b/style.css
@@ -98,6 +98,13 @@ h2 {
 			outline: 0;
 		}
 
-	#psm-checkbox {
-		padding: 6px;
-	}
+/*---Checkbox hack ---*/
+
+.colour-tester {
+	background-color: white;
+	width: 30px;
+	height: 30px;
+}
+input[type=checkbox]:checked ~ .colour-tester {
+	background-color: black;
+}
