Adjusted PSM button and updated readme

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 .thermostat-container {
-	width: 20%;
+	width: 240px;
 	font-family: 'Helvetica Neue', Helvetica;
 	padding: 20px 0px 0px 0px;
 	margin-right: auto;
