stopped transitions on loading

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
 body {
 	font-family: 'Helvetica Neue', Helvetica;
 	background: url('../images/white_wall.png');
